--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+            <button class="btn" onclick="window.open('https://drive.google.com/file/d/1S-M_3BeDeLNc-jrYHJm82Yp6irer64eO/view?usp=drive_link');">Download CV <i class="uil uil-file-alt"></i></button>
         </div>
         <div class="nav-menu-btn">
             <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -70,7 +70,7 @@ Experienced IT and cybersecurity engineer with a knack for developing visually a
                 </p>
             </div>
             <div class="featured-text-btn">
-                <button class="btn blue-btn">Download CV <i class="uil uil-file-alt"></i></button>
+                <button class="btn blue-btn"  onclick="window.open('https://drive.google.com/file/d/1S-M_3BeDeLNc-jrYHJm82Yp6irer64eO/view?usp=drive_link');" >Download CV <i class="uil uil-file-alt"></i></button>
                 
             </div>
             <div class="social_icons">
@@ -106,7 +106,7 @@ Experienced IT and cybersecurity engineer with a knack for developing visually a
                         I'm a dedicated web developer who excels at crafting simple yet powerful websites that enhance user experience. Meeting clients' needs within deadlines and budgets is our priority. Every keystroke is about translating ideas into dynamic web experiences that are intuitive and engaging. Plus, I have a strong background in cybersecurity to ensure our projects are safe and secure.   
                     </p>
                     <div class="about-btn">
-                        <button class="btn">Download CV <i class="uil uil-import"></i></button>
+                        <button class="btn"  onclick="window.open('https://drive.google.com/file/d/1S-M_3BeDeLNc-jrYHJm82Yp6irer64eO/view?usp=drive_link');">Download CV <i class="uil uil-import"></i></button>
                     </div>
                 </div>
             </div>
